2012-06-01  Niibe Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary_libusb.py (main): Support firmware update
	key registration.

	Update of reGNUal.
	* regnual/regnual.c (main): Follow the change of usb_lld_init.
	(regnual_config_desc): Include interface descriptor.
	(usb-strings.c.inc): Change the file name.
	* regnual/Makefile (regnual.o): Depend on sys.h.
	* src/configure (usb-strings.c.inc): ifdef-out
	gnuk_revision_detail and gnuk_config_options (for reGNUal).
	* src/usb_desc.c (USB_STRINGS_FOR_GNUK): Define.

	USB bug fixes.
	* src/usb_ctrl.c (gnuk_usb_event): Bug fix for handling
	USB_EVENT_CONFIG.  Do nothing when current_conf == value.
	* src/usb_lld.c (std_clear_feature): Bug fix.  Always clear DTOG.
	(usb_lld_init): New argument for FEATURE.

2012-05-31  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): BUF size is
	256 (was: 1024).
	* src/call-rsa.c (rsa_verify): It's SIG_RSA_SHA1.
	* src/openpgp.c (cmd_external_authenticate): Follow the change of
	rsa_verify.

	Support "firmware update" keys.
	* src/flash.c (flash_write_binary): Support update keys.
	* src/gnuk.h (FILEID_UPDATE_KEY_0, FILEID_UPDATE_KEY_1)
	(FILEID_UPDATE_KEY_2,FILEID_UPDATE_KEY_3): New.
	* src/gnuk.ld.in (_updatekey_store): New.
	* src/openpgp.c (FILE_EF_UPDATE_KEY_0, FILE_EF_UPDATE_KEY_1)
	(FILE_EF_UPDATE_KEY_2, FILE_EF_UPDATE_KEY_3): New.
	(gpg_get_firmware_update_key): New.
	(cmd_read_binary): Support update keys and certificate.
	(modify_binary): New.
	(cmd_update_binary, cmd_write_binary): Use modify_binary.
	(cmd_external_authenticate): Support up to four keys.

	Version string of system service is now USB string.
	* src/sys.h (unique_device_id): Define here, not as system
	service.
	* src/sys.c (sys_version): Version string for system service.
	* src/usb_desc.c (String_Descriptors): Add sys_version.
	* src/usb_conf.h (NUM_STRING_DESC): 7 (was: 6).
	* src/gnuk.ld.in (.sys.version): New section.

2012-05-30  Niibe Yutaka  <gniibe@fsij.org>
